--- a/src/pages/experience/Experience.module.css
+++ b/src/pages/experience/Experience.module.css
@@ -13,7 +13,7 @@
   text-decoration: underline;
 }
 .text {
-  padding-bottom: 3%;
+  padding-bottom: 1%;
   display: inline-block;
 }
 .imgContainer {
@@ -23,20 +23,18 @@
   padding-left: 1%;
   padding-right: 3%;
   text-align: right;
-  width: 20%;
 }
 .projectImgCaption {
   padding-left: 5%;
-  padding-bottom: 5%;
 }
 .skillsList {
-  padding-top: 0 !important;
+  margin-left: 3%;
   padding-bottom: 3%;
-  width: 40%;
+  padding-top: 0px !important;
 }
 .skill {
-  padding-top: 2px !important;
-  padding-bottom: 15px !important;
+  padding-bottom: 0px !important;
+  padding-top: 0px !important;
 }
 .links {
   font-style: italic;
