--- a/src/pages/experience/Experience.module.css
+++ b/src/pages/experience/Experience.module.css
@@ -9,32 +9,17 @@
   -o-animation: fadein 1s; /* Opera < 12.1 */
   animation: fadein 1s;
 }
+.imgStyle {
+  border-radius: 5px;
+  float: right;
+  width: 70%;
+  height: auto;
+}
 .header {
   text-decoration: underline;
 }
 .text {
-  padding-bottom: 1%;
   display: inline-block;
-}
-.imgContainer {
-  padding-bottom: 3%;
-}
-.imgCaption {
-  padding-left: 1%;
-  padding-right: 3%;
-  text-align: right;
-}
-.projectImgCaption {
-  padding-left: 5%;
-}
-.skillsList {
-  margin-left: 3%;
-  padding-bottom: 3%;
-  padding-top: 0px !important;
-}
-.skill {
-  padding-bottom: 0px !important;
-  padding-top: 0px !important;
 }
 .links {
   font-style: italic;
