--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -18,6 +18,11 @@
 .imgContainer {
   padding-bottom: 3%;
 }
+.imgStyle {
+  width: 30%;
+  border-radius: 5px;
+  margin: 0 auto;
+}
 @keyframes fadein {
   from {
     opacity: 0;
